fix cv css on mobile

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -304,6 +304,12 @@ article {
           width: 100% !important;
         }
       }
+      a.btn.cv {
+        float: none;
+        display: block;
+        text-align: center;
+        margin: 10px 0 30px;
+      }
     }
   }
 
